# ZenOS

./: .gitignore  README.md  app.py  pyproject.toml
assets/css/: components.css  main.css  themes.css
scripts/: fix_db_columns.py  test_query_courses.py  test_query_courses_sqlalchemy.py
src/: __init__.py
src/components/: attendance.py  copilot.py  dashboard.py  flashcards.py  focus_analytics.py  layout.py  research_coach.py  study_session.py  syllabus_upload.py  timetable.py  wellness.py
src/components/ui/: __init__.py  card.py  metric.py  progress_bar.py  timer.py
src/database/: __init__.py  database.py  models.py
src/services/: gemini_service.py  grade_calculator.py  pdf_service.py  scheduling_service.py  spaced_repetition.py
src/utils/: constants.py  course_helpers.py  helpers.py
